--- a/templates/dice-config.hbs
+++ b/templates/dice-config.hbs
@@ -123,6 +123,12 @@
         {{/each}}
     </div>
 
+    <div class="ekd-editor-footer">
+        <button type="submit">
+            <i class="fas fa-save"></i> {{localize "EKD.Editor.Save"}}
+        </button>
+    </div>
+
 {{else}}
     <!-- ═══════════════════════════════════════ -->
     <!--  LIST VIEW                              -->
